# industrial_datascience_live_machine

./: Dockerfile  commithash.txt  opc-ua-client.py  pyproject.toml  readme.md
data/: simulated_opcua_postinspection.csv
