[project]
name = "simmachine_picknplace"
version = "1.0.0"
authors = [
    {name = "Gregor Ehrensperger", email = "g@ehrensperger.dev"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT License"}

dependencies = [
    "asyncio>=4.0.0",
    "asyncua>=1.1.8",
    "numpy>=2.4.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
]

release = [
    "pip>=25.3",
    "pyarmor>=9.2.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
